<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:minWidth="320dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginVertical="@dimen/padding_vertical">

            <TextView
                android:id="@+id/fee_amount_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <androidx.legacy.widget.Space
                android:layout_height="match_parent"
                android:layout_width="@dimen/space_between_textview"/>
            <TextView
                android:id="@+id/fee_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/continue_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/continue_prompt"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="@dimen/padding_vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:id="@+id/confirm_button"
            android:text="@string/confirm_option_yes"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:id="@+id/cancel_button"
            android:text="@string/confirm_option_no"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:id="@+id/bypass_button"
            android:text="@string/bypass"/>
    </LinearLayout>

</LinearLayout>