<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/margin_gap"
    >

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/sale_amount_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale_amount"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sale_amount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fee_amount_name"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/sale_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/name_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sale_amount_name"
        app:layout_constraintBottom_toBottomOf="@id/sale_amount_name"

        />

    <TextView
        android:id="@+id/fee_amount_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@id/sale_amount_name"
        app:layout_constraintTop_toBottomOf="@id/sale_amount_name"
        app:layout_constraintBottom_toTopOf="@id/total_amount_name"
        />

    <TextView
        android:id="@+id/fee_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/name_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fee_amount_name"
        app:layout_constraintBottom_toBottomOf="@id/fee_amount_name"
        />

    <TextView
        android:id="@+id/total_amount_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount"

        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@id/sale_amount_name"
        app:layout_constraintTop_toBottomOf="@id/fee_amount_name"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        />

    <TextView
        android:id="@+id/total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/name_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/total_amount_name"
        app:layout_constraintBottom_toBottomOf="@id/total_amount_name"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/name_barrier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:barrierMargin="@dimen/space_between_textview"
        app:constraint_referenced_ids="sale_amount_name,fee_amount_name,total_amount_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/confirm_decline"
        android:layout_marginHorizontal="@dimen/margin_gap"

        android:visibility="gone"

        app:layout_constraintTop_toTopOf="@id/confirm_button"
        app:layout_constraintBottom_toBottomOf="@id/confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirm_button"
        />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/confirm_option_accept"
        android:layout_marginHorizontal="@dimen/margin_gap"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="1"
        />

</androidx.constraintlayout.widget.ConstraintLayout>























